@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.messaging.handler.annotation.reactive;
 
 import java.lang.annotation.Annotation;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -63,7 +62,7 @@ import org.springframework.validation.annotation.Validated;
  * {@link DataBuffer DataBuffer}.
  *
  * <p>Validation is applied if the method argument is annotated with
- * {@code @javax.validation.Valid} or
+ * {@code @jakarta.validation.Valid} or
  * {@link org.springframework.validation.annotation.Validated}. Validation
  * failure results in an {@link MethodArgumentNotValidException}.
  *
@@ -93,7 +92,7 @@ public class PayloadMethodArgumentResolver implements HandlerMethodArgumentResol
 			@Nullable ReactiveAdapterRegistry registry, boolean useDefaultResolution) {
 
 		Assert.isTrue(!CollectionUtils.isEmpty(decoders), "At least one Decoder is required");
-		this.decoders = Collections.unmodifiableList(new ArrayList<>(decoders));
+		this.decoders = List.copyOf(decoders);
 		this.validator = validator;
 		this.adapterRegistry = registry != null ? registry : ReactiveAdapterRegistry.getSharedInstance();
 		this.useDefaultResolution = useDefaultResolution;
@@ -143,14 +142,12 @@ public class PayloadMethodArgumentResolver implements HandlerMethodArgumentResol
 	 * {@link Decoder}.
 	 *
 	 * <p>Validation is applied if the method argument is annotated with
-	 * {@code @javax.validation.Valid} or
+	 * {@code @jakarta.validation.Valid} or
 	 * {@link org.springframework.validation.annotation.Validated}. Validation
 	 * failure results in an {@link MethodArgumentNotValidException}.
-	 *
 	 * @param parameter the target method argument that we are decoding to
 	 * @param message the message from which the content was extracted
 	 * @return a Mono with the result of argument resolution
-	 *
 	 * @see #extractContent(MethodParameter, Message)
 	 * @see #getMimeType(Message)
 	 */
@@ -172,13 +169,13 @@ public class PayloadMethodArgumentResolver implements HandlerMethodArgumentResol
 	@SuppressWarnings("unchecked")
 	private Flux<DataBuffer> extractContent(MethodParameter parameter, Message<?> message) {
 		Object payload = message.getPayload();
-		if (payload instanceof DataBuffer) {
-			return Flux.just((DataBuffer) payload);
+		if (payload instanceof DataBuffer dataBuffer) {
+			return Flux.just(dataBuffer);
 		}
-		if (payload instanceof Publisher) {
-			return Flux.from((Publisher<?>) payload).map(value -> {
-				if (value instanceof DataBuffer) {
-					return (DataBuffer) value;
+		if (payload instanceof Publisher<?> publisher) {
+			return Flux.from(publisher).map(value -> {
+				if (value instanceof DataBuffer dataBuffer) {
+					return dataBuffer;
 				}
 				String className = value.getClass().getName();
 				throw getUnexpectedPayloadError(message, parameter, "Publisher<" + className + ">");
@@ -206,11 +203,11 @@ public class PayloadMethodArgumentResolver implements HandlerMethodArgumentResol
 		if (headerValue == null) {
 			return null;
 		}
-		else if (headerValue instanceof String) {
-			return MimeTypeUtils.parseMimeType((String) headerValue);
+		else if (headerValue instanceof String stringHeader) {
+			return MimeTypeUtils.parseMimeType(stringHeader);
 		}
-		else if (headerValue instanceof MimeType) {
-			return (MimeType) headerValue;
+		else if (headerValue instanceof MimeType mimeTypeHeader) {
+			return mimeTypeHeader;
 		}
 		else {
 			throw new IllegalArgumentException("Unexpected MimeType value: " + headerValue);
@@ -292,12 +289,12 @@ public class PayloadMethodArgumentResolver implements HandlerMethodArgumentResol
 			Validated validatedAnn = AnnotationUtils.getAnnotation(ann, Validated.class);
 			if (validatedAnn != null || ann.annotationType().getSimpleName().startsWith("Valid")) {
 				Object hints = (validatedAnn != null ? validatedAnn.value() : AnnotationUtils.getValue(ann));
-				Object[] validationHints = (hints instanceof Object[] ? (Object[]) hints : new Object[] {hints});
+				Object[] validationHints = (hints instanceof Object[] objectHints ? objectHints : new Object[] {hints});
 				String name = Conventions.getVariableNameForParameter(parameter);
 				return target -> {
 					BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(target, name);
-					if (!ObjectUtils.isEmpty(validationHints) && this.validator instanceof SmartValidator) {
-						((SmartValidator) this.validator).validate(target, bindingResult, validationHints);
+					if (!ObjectUtils.isEmpty(validationHints) && this.validator instanceof SmartValidator sv) {
+						sv.validate(target, bindingResult, validationHints);
 					}
 					else {
 						this.validator.validate(target, bindingResult);
